# fct2026

./: .gitignore  .gitignore.backup  FinalStructure.md  copilot-instruccions.md  findings.md  progress.md  prompt_hu10_gemini.md  task_plan.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  ERP_estructura.md  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 254b2bcea75d_merge_suppliers_and_departments_repair.py  31eeae62e2f3_merge_discount_and_purchase_status_.py  3c7a1f9e2b84_ensure_departments_and_users_tables_exist.py  4a6fcd3dde06_add_clients_table.py  4bd6e6c99238_add_supplier_products_product_fk.py  6420ed7a69c6_create_products_table.py  80f43570db6f_merge_development_heads.py  890e4ffe7ec7_create_usuarios_table.py  9d1e2f3a4b5c_add_unique_constraint_to_clients_email.py  9f3b2c1d4e6a_add_full_address_fields_to_warehouses.py  a1b2c3d4e5f6_create_warehouse_tables.py  a1b2c3d4e5f6_merge_all_heads.py  a1b2c3d4e5f7_add_sales_tables.py  a1b2c3d4e5f8_add_unique_constraint_to_suppliers_email.py  a2b3c4d5e6f7_add_cancellation_fields_to_purchases.py  a3b4c5d6e7f8_add_origin_links_to_stock_movements.py  b1c2d3e4f5a6_merge_catalog_products_heads.py  b2c3d4e5f6a7_add_warehouse_id_to_sales.py  b3c4d5e6f7a8_create_stock_movements_table.py  b5c6d7e8f9a0_add_purchases_tables.py  b5ff70b31214_make_department_name_unique_case_.py  (+25 more)
backend/composition/: dependencies.py  router_registry.py  security.py
backend/shared/: config.py  constants.py  exceptions.py
backend/tests/: conftest.py
(+846 files in other folders)
